# http

./: .gitignore  Block.h  CMakeLists.txt  Chain.h  Game  Makefile  README.md  Transaction.h  a.out  block.h  build.sh  hash.h  main  main.cpp  main.cxx  output  package-lock.json  package.json  shell.nix  transaction.h
frontend/: package.json
frontend/public/: index.html
frontend/src/: Main.js  Side.js
frontend/src/componets/: Email.js
frontend/src/styles/: Main.css
include/: RenderWindow.hpp
includes/: RenderWindow.hpp  client.h  request.h  response.h  routes.h  server.bak  server.h  status.h  utils.h
public/: index.html
server/: .env  package-lock.json  package.json  server.js
src/: App.js  Main.js  Side.js  index.js  ne.txt  render.cpp  server  server.cpp
src/componets/: Email.js  Intro.js  Projects.js
src/styles/: Main.css  Side.css  index.css
srcs/: main.cpp  render_window.cpp
statics/: home.html  index.html
